unpackaged/main/default/objects/project_cloud__Requirement_Fulfillment__c/project_cloud__Requirement_Fulfillment__c.object-meta.xml
<CustomObject>
    <label>Requirement Fulfillment</label>
    <nameField>
        <displayFormat>RF-{0}</displayFormat>
        <label>Requirement Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Fulfillments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>