unpackaged/main/default/objects/project_cloud__Requirement_Fulfillment__c/fields/project_cloud__Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Fulfilled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if a user would like to indicate that this Requirement Fulfillment has been completed.</inlineHelpText>
    <label>Fulfilled</label>
    <type>Checkbox</type>
</CustomField>