unpackaged/main/default/objects/project_cloud__Requirement_Fulfillment__c/fields/project_cloud__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show the Project Task that is related to the Requirement Fulfillment.</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipLabel>Requirement Fulfillments</relationshipLabel>
    <relationshipName>Requirement_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>