unpackaged/main/default/objects/project_cloud__Requirement_Fulfillment__c/fields/project_cloud__Requirement__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Requirement__c</fullName>
    <inlineHelpText>This field will show the Requirement the Requirement Fulfillment is in relation too.</inlineHelpText>
    <label>Requirement</label>
    <referenceTo>project_cloud__Requirement__c</referenceTo>
    <relationshipLabel>Requirement Fulfillments</relationshipLabel>
    <relationshipName>Requirement_Fulfillments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>