unpackaged/main/default/objects/project_cloud__Requirement_Fulfillment__c/fields/project_cloud__Ticket__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket</label>
    <referenceTo>project_cloud__Ticket__c</referenceTo>
    <relationshipLabel>Requirement Fulfillments</relationshipLabel>
    <relationshipName>Requirement_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>